--- a/rtos-course/hellow-rtos/Debug/makefile
+++ b/rtos-course/hellow-rtos/Debug/makefile
@@ -1,6 +1,6 @@
 ################################################################################
 # Automatically-generated file. Do not edit!
-# Toolchain: GNU Tools for STM32 (12.3.rel1)
+# Toolchain: loxal-default
 ################################################################################
 
 -include ../makefile.init
@@ -10,7 +10,6 @@ RM := rm -rf
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include third-party/freeRtos/portable/MemMang/subdir.mk
--include third-party/freeRtos/portable/GCC/ARM_CM4_MPU/subdir.mk
 -include third-party/freeRtos/portable/GCC/ARM_CM4F/subdir.mk
 -include third-party/freeRtos/subdir.mk
 -include Drivers/STM32F4xx_HAL_Driver/Src/subdir.mk
